Theme CSS + JS Built modularly

--- a/application/database/config.json
+++ b/application/database/config.json
@@ -1,6 +1,1 @@
-{
-	"theme": {
-		"themes" : ["default"],
-		"activeTheme" : "default"
-	}
-}
+{"theme":{"themes":["default","gsma"],"activeTheme":"default"}}
