--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp": "^4.0.0",
     "gulp-clean-css": "^3.9.4",
     "gulp-concat": "^2.6.0",
+    "gulp-css2js": "^1.1.2",
     "gulp-debug": "^4.0.0",
     "gulp-html-partial": "^1.0.1",
     "gulp-html-to-js": "0.0.7",
@@ -29,6 +30,7 @@
     "gulp-inject-file": "0.0.18",
     "gulp-inject-string": "^1.1.0",
     "gulp-inline-source": "^3.1.0",
+    "gulp-jsbeautifier": "^3.0.0",
     "gulp-live-server": "0.0.31",
     "gulp-nodemon": "^2.4.2",
     "gulp-order": "^1.1.1",
