--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "devDependencies": {
     "@moebius/http-graceful-shutdown": "^1.0.1",
     "browser-sync": "^2.11.1",
+    "clear-require": "^3.0.0",
     "cli-color": "^1.4.0",
     "connect-modrewrite": "^0.10.2",
     "cors": "^2.8.5",
+    "decache": "^4.5.1",
     "download-file": "^0.1.5",
     "express": "^4.16.3",
     "fancy-log": "^1.3.3",
