Added GSMA plugin build system

--- a/application/database/config.json
+++ b/application/database/config.json
@@ -1,1 +1,5 @@
-{"theme":{"themes":["default","gsma"],"activeTheme":"default"}}
+{"project" : {
+	"template_name" : "StoryBox Template Plugin",
+	"template_description" : "Template for StoryBox Template Plugin.",
+	"base_url" : "http://localhost/"
+},"theme":{"themes":["default","gsma"],"activeTheme":"default"}}
