--- a/application/database/config.json
+++ b/application/database/config.json
@@ -2,5 +2,5 @@
 	"template_name" : "StoryBox Template Plugin",
 	"template_shortname" : "storybox_template_plugin",
 	"template_description" : "Template for StoryBox Template Plugin.",
-	"base_url" : "http://localhost/"
+	"base_url" : "http://localhost:3000/"
 },"theme":{"themes":["default","gsma"],"activeTheme":"default"}}
